<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/White"
            android:orientation="vertical"
            android:padding="@dimen/dp_12">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_40"
                android:text="@string/label_welcome"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_28"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icon1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_phone_iphone_24"
                    android:tint="@color/black_50" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tipEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_6"
                    android:layout_toEndOf="@id/icon1">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/input_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:hint="@string/label_mail"
                        android:inputType="phone"
                        android:maxLength="15"
                        android:paddingTop="@dimen/dp_4"
                        android:textSize="@dimen/sp_14" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@id/tipEmail"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/colorPrimary" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingTop="6dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_vpn_key_24"
                    android:tint="@color/black_50" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tipPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_6"
                    android:layout_toEndOf="@id/icon2">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/label_password"
                        android:inputType="textPassword"
                        android:paddingTop="@dimen/dp_4"
                        android:textSize="@dimen/sp_14" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@id/tipPassword"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/colorPrimary" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_12">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:drawableStart="@drawable/ic_baseline_check_circle_24"
                    android:drawablePadding="@dimen/dp_12"
                    android:drawableTint="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/label_remember_me"
                    android:textColor="@color/black_50"
                    android:textSize="@dimen/sp_12" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:text="@string/label_forgot_password"
                    android:textColor="@color/black_50"
                    android:textSize="@dimen/sp_12" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_login"
                android:foreground="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:paddingTop="@dimen/dp_15"
                android:paddingBottom="@dimen/dp_15"
                android:text="@string/label_login"
                android:textAllCaps="true"
                android:textColor="@color/White"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:gravity="center"
                android:text="@string/label_or_login_with"
                android:textColor="@color/black_50"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_6"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/White"
                    app:cardCornerRadius="@dimen/dp_6"
                    app:cardUseCompatPadding="true">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="@dimen/dp_24"
                        android:paddingBottom="@dimen/dp_24"
                        android:src="@drawable/ic_baseline_facebook_24"
                        android:tint="@color/blue_800" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_6"
                    android:layout_marginEnd="@dimen/dp_6"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/White"
                    app:cardCornerRadius="@dimen/dp_6"
                    app:cardUseCompatPadding="true">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="@dimen/dp_24"
                        android:paddingBottom="@dimen/dp_24"
                        android:src="@drawable/ic_google_plus"
                        android:tint="@color/orange_900" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_6"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/White"
                    app:cardCornerRadius="@dimen/dp_6"
                    app:cardUseCompatPadding="true">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="@dimen/dp_24"
                        android:paddingBottom="@dimen/dp_24"
                        android:src="@drawable/twitter" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/dp_12"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_not_a_turino_user_yet"
                android:textColor="@color/black_50"
                android:textSize="@dimen/sp_14" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_12"
                android:gravity="center"
                android:text="@string/label_sign_up_here"
                android:textColor="@color/black_363a45"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</layout>